# Crypto_RAG

./: .gitignore  README.md  crypto_RAG.ipynb  crypto_news.csv  docker-compose.yml
agent/: .env.example  Dockerfile  Makefile  pyproject.toml
agent/app/: main.py
agent/app/agent/: agent.py  nodes.py
agent/app/agent/prompts/: __init__.py  system.md
agent/app/agent/tools/: __init__.py  news.py
agent/app/apis/: __init__.py  chat.py  news.py
agent/app/core/: config.py  genai.py  mongodb.py  vectordb.py
agent/app/models/chats/: chat.py  chat_schema.py
agent/app/models/news/: news.py  news_schema.py
agent/app/services/: chat.py  chunk.py  embed.py  news.py  rag.py  scrape.py  vectordb.py
agent/app/utils/: logger.py  middleware.py
crypto-rag-frontend/: .env.example  Dockerfile  package-lock.json  package.json
crypto-rag-frontend/app/: globals.css  layout.tsx  page.tsx
crypto-rag-frontend/app/chat/: page.tsx
crypto-rag-frontend/app/chat/components/: ChatMessage.tsx  PromptInput.tsx  Sidebar.tsx
crypto-rag-frontend/lib/api/: axiosInstances.ts
crypto-rag-frontend/types/: chat.ts
crypto-rag-frontend/ui/components/: CodeBlock.tsx  Markdown.tsx
